--- a/cwiczenie-1.html
+++ b/cwiczenie-1.html
@@ -23,10 +23,18 @@
 	
 		function wylosuj()
 		{
+			var ile = document.getElementById('ile').value;
+			var wynikDiv = document.getElementById('wynik');
 			
+			wynikDiv.innerHTML = "";
 			
-			
-			var liczba = Math.floor(Math.random() * 1000) + 1;
+			var wynik = "Liczby: ";
+			for (var i = 0; i < ile; i++) {
+				var liczba = Math.floor(Math.random() * 1000) + 1;
+				wynik += liczba + " ";
+			}
+
+			wynikDiv.innerHTML = wynik;
 			
 		}
 
